sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: forward reference extends over definition of variable ecart
  var ecart:Int = long;
                  ^AlgCombSort:3: error: forward reference extends over definition of variable long
  var ecart:Int = long;
                  ^